2021-03-24  6.9.12-5  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-5 GIT revision 16...

2021-03-24  6.9.12-5  <quetzlzacatenango@image...>
  * eliminate extraneous spaces in AC_PATH_PROG (reference
    https://github.com/ImageMagick/ImageMagick/issues/3428).

2021-03-20  6.9.12-4  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-4 GIT revision 16525:21991f726:20210320

2021-03-13  6.9.12-4  <quetzlzacatenango@image...>
  * support caption:split define (reference
    https://github.com/ImageMagick/ImageMagick/discussions/3389).
  * avoid an omp deadlock with policy string

2021-03-06  6.9.12-3  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-3 GIT revision 16511:448f9271e:20210306

2021-03-02  6.9.12-3  <quetzlzacatenango@image...>
  * Eliminate multiple division by zero exceptions (reference
    https://github.com/ImageMagick/ImageMagick/issues/3339 and others).
  * Use -define filename:literal=true to bypass interpretting embedded 
    formatting characters and instead use the filename literally.

2021-02-27  6.9.12-2  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-2 GIT revision 16494:64c0cc234:2021022

2021-02-21  6.9.12-2  <happyerc...@...>
  * Division by zero error is possible if crafty file sets film-gamma property
  * Check for overflow in thumbnail coder
  * Prevent compiler from optimizing out buffer clearing in cipher

2021-02-21  6.9.12-2  <quetzlzacatenango@image...>
  * Clone properties from image stack.

2021-02-21  6.9.12-1  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-1 GIT revision 16474:e6a300ef2:20210221

2021-02-15  6.9.12-1  <quetzlzacatenango@image...>
  * fix EXR crash (reference
    https://github.com/ImageMagick/ImageMagick/issues/3242

2021-02-13  6.9.12-0  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-0 GIT revision 16464:dab48bafd:20210213

2021-02-10  6.9.12-0  <quetzlzacatenango@image...>